WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14664
Misaligned logo on www.nzherald.co.nz possibly due to negative margin-top
https://bugs.webkit.org/show_bug.cgi?id=14664
Summary
Misaligned logo on www.nzherald.co.nz possibly due to negative margin-top
Darren Collins
Reported
2007-07-18 13:47:19 PDT
The main logo on www.nzherald.co.nz is not aligned to the left when using Safari 3.0.2 and local builds up to
r24395
on Windows XP. Screenshot attached. On Firefox and IE the logo is correctly aligned. I have not tested on OS X or Safari 2.
Attachments
Screenshot with misaligned logo circled in red
(77.20 KB, image/png)
2007-07-18 13:48 PDT
,
Darren Collins
no flags
Details
Reduction
(303 bytes, text/html)
2007-07-18 13:51 PDT
,
Darren Collins
no flags
Details
Image used by reduction
(197 bytes, image/png)
2007-07-18 13:52 PDT
,
Darren Collins
no flags
Details
Patch
(8.08 KB, patch)
2013-01-07 10:31 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darren Collins
Comment 1
2007-07-18 13:48:31 PDT
Created
attachment 15567
[details]
Screenshot with misaligned logo circled in red
Darren Collins
Comment 2
2007-07-18 13:51:40 PDT
Created
attachment 15568
[details]
Reduction reduction. Note that margin-top on the div must be negative to trigger the problem. Firefox and IE display "should be aligned to left" text aligned to the left. Safari 3.0.2 on WinXP displays text aligned to left of second image.
Darren Collins
Comment 3
2007-07-18 13:52:09 PDT
Created
attachment 15569
[details]
Image used by reduction
David Kilzer (:ddkilzer)
Comment 4
2007-07-18 23:40:59 PDT
Opera 9.21 agrees with my local build of WebKit
r24439
with Safari 3.0 (522.12) on Mac OS X 10.4.10 (8R218) in that it shows the text aligned with the second image. Firefox 3.0a7 and 2.0.0.4 show the text aligned below the left-most (first) image. What does MSIE 6 or 7 do? Confirming bug due to difference in rendering. Not sure if it's correct or not, though.
David Kilzer (:ddkilzer)
Comment 5
2007-07-18 23:41:41 PDT
Not a regression as Safari 2.0.4 (419.3) with original WebKit on 10.4.10 behaves the same was as Safari 3.0.
Darren Collins
Comment 6
2007-07-19 01:22:08 PDT
MSIE 6 and 7 both align below the left-most image as per Firefox.
Dave Hyatt
Comment 7
2007-09-27 15:12:42 PDT
Yeah, this is a bug. It looks like when we shift to clear, we aren't properly figuring out that we no longer overlap the float.
Robert Hogan
Comment 8
2013-01-07 10:31:54 PST
Created
attachment 181521
[details]
Patch
Build Bot
Comment 9
2013-01-07 11:25:20 PST
Comment on
attachment 181521
[details]
Patch
Attachment 181521
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/15740766
New failing tests: fast/block/float/024.html fast/block/margin-collapse/empty-clear-blocks.html
Build Bot
Comment 10
2013-01-17 01:27:10 PST
Comment on
attachment 181521
[details]
Patch
Attachment 181521
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://queues.webkit.org/results/15914739
New failing tests: fast/block/float/024.html fast/block/margin-collapse/empty-clear-blocks.html
Dave Hyatt
Comment 11
2013-01-21 13:51:52 PST
Comment on
attachment 181521
[details]
Patch r=me
WebKit Review Bot
Comment 12
2013-01-21 13:59:52 PST
Comment on
attachment 181521
[details]
Patch Clearing flags on attachment: 181521 Committed
r140358
: <
http://trac.webkit.org/changeset/140358
>
WebKit Review Bot
Comment 13
2013-01-21 13:59:56 PST
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 14
2013-01-21 14:23:50 PST
Rebaselined mac expected results: Committed
r140363
: <
http://trac.webkit.org/changeset/140363
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug