Misaligned logo on www.nzherald.co.nz possibly due to negative margin-top https://bugs.webkit.org/show_bug.cgi?id=14664

Reviewed by David Hyatt.

Source/WebCore:

Test: fast/block/float/clear-negative-margin-top.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::collapseMargins): If a negative margin pulls a block up so that floats from
siblings overhang, then ensure addOverHangingFloats() uses the revised logical top position when
deciding whether a float does indeed overhang into the block after margin-collapsing.
(WebCore::RenderBlock::clearFloatsIfNeeded):

LayoutTests:

* fast/block/float/clear-negative-margin-top-expected.html: Added.
* fast/block/float/clear-negative-margin-top.html: Added.
* platform/chromium-win/fast/block/float/024-expected.txt:
* platform/chromium-win/fast/block/margin-collapse/empty-clear-blocks-expected.txt:


Canonical link: https://commits.webkit.org/125707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140358 268f45cc-cd09-0410-ab3c-d52691b4dbfc